# figmint

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FABLE_START.md  IMPLEMENTATION_SPEC.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
examples/: basic_edit.py
figmint/: __init__.py  __main__.py  api.py  app.py
figmint/core/: __init__.py  commands.py  editlog.py  history.py
figmint/io/: __init__.py  export_image.py
figmint/model/: __init__.py  artref.py  selection.py
figmint/panels/: __init__.py  properties.py
figmint/util/: __init__.py  env.py
figmint/view/: __init__.py  canvas.py  theme.py  window.py
search/: search_index.json
tests/: conftest.py  test_artref.py  test_commands.py  test_editlog.py  test_env.py  test_export.py  test_history.py  test_property_panel.py  test_selection.py  test_smoke.py  test_window.py
