[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figmint"
version = "0.1.0"
description = "Direct-manipulation figure editor for matplotlib — edit, annotate, zoom-inset, beautify, export."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "wsiyal" }]
keywords = ["matplotlib", "figure", "editor", "gui", "plotting", "publication", "science"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Visualization",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "matplotlib>=3.8",
  "PySide6>=6.6",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-qt>=4", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11", "build>=1.2"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Homepage = "https://github.com/wsiyal/figmint"
Documentation = "https://wsiyal.github.io/figmint"
Issues = "https://github.com/wsiyal/figmint/issues"
Changelog = "https://github.com/wsiyal/figmint/blob/main/CHANGELOG.md"

[project.scripts]
# Implemented by Fable in figmint/__main__.py (see IMPLEMENTATION_SPEC.md §15).
figmint = "figmint.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["figmint"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
# Type-check figmint's own code only. "skip" means mypy does NOT parse third-party
# modules (matplotlib/numpy) at all — avoids failing on their stubs' newer syntax
# (e.g. numpy 2.5 uses PEP 695 `type` statements that error under python_version 3.10).
# Keeps CI deterministic across Python/numpy versions. Fable can switch to
# follow_imports = "normal" once it wants strict matplotlib typing.
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
